# SharedPointerDesignIssue

./: CMakeLists.txt  README.MD
include/: Element.h  ElementFactory.h  ElementSP.h  MyDerivedFilter.h  MyFilter.h  MyInput.h
src/: main.cpp
